syntax = "proto3";

package grain.twitter;

option go_package = "twitterpb";

message Url {
  repeated int64 indices = 1;
  string url = 2;
  string display_url = 3;
  string expanded_url = 4;
}

message Hashtag {
  repeated int64 indices = 1;
  string text = 2;
}

message UserMention {
  reserved "id_str";
  repeated int64 indices = 1;
  string name = 2;
  string screen_name = 3;
  int64 id = 4;
}

message MediaSize {
  int32 w = 1;
  int32 h = 2;
  string resize = 3;
}

message MediaSizes {
  MediaSize medium = 1;
  MediaSize thumb = 2;
  MediaSize small = 3;
  MediaSize large = 4;
}

message Variant {
  int32 bitrate = 1;
  string content_type = 2;
  string url = 3;
}

message VideoInfo {
  repeated int32 aspect_ratio = 1;
  int64 duration_millis = 2;
  repeated Variant variants = 3;
}

message EntityMedia {
  reserved "id_str", "source_status_id_str";
  int64 id = 1;
  string media_url = 2;
  string media_url_https = 3;
  string url = 4;
  string display_url = 5;
  string expanded_url = 6;
  MediaSizes sizes = 7;
  int64 source_status_id = 8;
  string type = 9;
  repeated int64 indices = 10;
  VideoInfo video_info = 11;
  string ext_alt_text = 12;
}

message Entities {
  repeated Url urls = 1;
  repeated Hashtag hashtags = 2;
  Url url = 3;
  repeated UserMention user_mentions = 4;
  repeated EntityMedia media = 5;
}
